verify/tests/cases/errors/end_case_without_case.b
REM Test: END CASE without matching CASE (should fail)
x% = 1
END CASE
